--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ShelterConnectDev?createDataba
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#The spring.jpa.hibernate.ddl-auto=update property automatically creates
-or updates database tables based on your entity classes.
-spring.jpa.hibernate.ddl-auto=update  
+# The spring.jpa.hibernate.ddl-auto=update property automatically creates
+# or updates database tables based on your entity classes.
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
