--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,20 @@
 
-
 server:
-  port: 8080
+  port: 3000
 
-  spring:
-    main:
-      web-application-type: servlet
+spring:
+  datasource:
+    url:
+    username:
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect:
+        format_sql:
+    show-sql: true
+  main:
+    web-application-type: servlet
+
